交接文档全面重写(上下文已满,非常详细版): 65/152、23/24 域完结、§6.16-6.20 本会话六篇经验(含各轮 REVIEW)、Temurin 11 实证 JDK、素材 5 个、commit 清单、实证方法论(wrapper/方括号/kill -3/class 版本)、下一步 08-interpreter